# algorithms

./: .gitignore
dz1/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  CMakeLists.txt  deck.cpp
dz2/: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  h.cpp  hash.cpp
dz3/: 2.cpp  3.cpp  4.cpp  4_1.cpp  5.cpp  CMakeLists.txt
dz3/1/: AdjancyList.cpp  AdjancyList.h  AdjancyMatrix.cpp  AdjancyMatrix.h  ArcGraph.cpp  ArcGraph.h  CMakeLists.txt  IGraph.h  SetGraph.cpp  SetGraph.h  main.cpp
dz3/5/: CMakeLists.txt  Edge.cpp  Edge.h  Experiment.cpp  Experiment.h  WeightedGraph.cpp  WeightedGraph.h  main.cpp
rk1/: 1.cpp  2.cpp  3.cpp  a.out
rk2/: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt
rk3/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
