cmake_minimum_required(VERSION 3.19)
project(dz)

set(CMAKE_CXX_STANDARD 14)

add_executable(dz1_1 1.cpp)
add_executable(dz1_2 2.cpp)
add_executable(dz1_3 3.cpp)
add_executable(dz1_4 4.cpp)
add_executable(dz1_5 5.cpp)
add_executable(dz1_6 6.cpp)
add_executable(dz1_7 7.cpp)
add_executable(deck deck.cpp)